tests/support/validation/invalid/stop_on_multiple_timepoints/pattern.pat
PAT;  350;035040080;Outbound  ; 5;3502    ;1;4       ;North Burlington - Alewife Station
TPS;141     ;alewf ;3502    ;1;
PAT;  350;035041999;Outbound  ; 5;3502    ;1;4       ;North Burlington - Alewife Station
TPS;141     ;nubn  ;3502    ;1;
